Us change/dsc and team styles changes, margin-top fixed  -  Offer bugfix/margin top fixed  -  Gallery/mobile L width: 310px  -  index.css feature/scrollbar styles added

--- a/index.css
+++ b/index.css
@@ -18,3 +18,17 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(77, 75, 75);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
